--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap" rel="stylesheet">
+    <link rel="stylesheet" 
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Wanghley's links</title>
 </head>
@@ -12,23 +16,37 @@
     <img class="headshot" src="assets/me.jpg" alt="">
     <h1 class="title"><span>Wanghley<span> Soares Martins</h1>
     <p class="description">Social entrepreneur, inventor, and aspiring engineer leveraging technology for transformative solutions.</p>
-    <div>
-        <a href=""></a>
-        <a href=""></a>
-        <a href=""></a>
-        <a href=""></a>
-        <a href=""></a>
+    <div class="social">
+        <i class="fa-brands fa-linkedin-in fa-2xl"></i>
+        <i class="fa-brands fa-instagram fa-2xl"></i>
+        <i class="fa-brands fa-twitter fa-2xl"></i>
+        <i class="fa-brands fa-github fa-2xl"></i>
+        <i class="fa-solid fa-globe fa-2xl"></i>
+        <i class="fa-solid fa-envelope fa-2xl"></i>
     </div>
-    <div>
+    <div class="meet">
         <h1>Que tal bater um papo? Agende um horário comigo!</h1>
-        <button>Vamos conversar? Marque um horário aqui!</button>
-        <button>Precisa de consultoria? Vem comigo!</button>
+        <button onclick="location.href='https://cal.com/wanghley'">Agende aqui!</button>
     </div>
-    <div>
-        <button>
-            <img src="" alt="">
-            <p>teste</p>
+    <hr/>
+    <div class="links">
+        <button target="_blank" onclick="location.href='https://www.youtube.com/watch?v=NHp4WqQ43oA'">
+            <p>Medalha de ouro em engenharia na Sérvia</p>
+        </button>
+        <button target="_blank" onclick="location.href='https://www.youtube.com/watch?v=vpdUxYPiTGM'">
+            <p>Wanghley no BananaCast @ Campus Party Brasilia 2022</p>
+        </button>
+        <button target="_blank" onclick="location.href='https://www.youtube.com/watch?v=UfoXSsbbtao'">
+            <p>Estudante do DF é aprovado na Duke University</p>
+        </button>
+        <button target="_blank" onclick="location.href='https://www.youtube.com/watch?v=UfoXSsbbtao'">
+            <p>Palestra "Criatividade para a inovação: como ser um jovem cientista?" @ CPBSB4</p>
+        </button>
+        <button target="_blank" onclick="location.href='https://www.correiobraziliense.com.br/euestudante/trabalho-e-formacao/2022/02/4985523-jovem-de-futuro.html'">
+            <p>Sou um Jovem de futuro</p>
         </button>
     </div>
+
+    <footer>Developed with 💙 by Wanghley - Sci & Tech</footer>
 </body>
 </html>
