feat: insert icon to schedule button

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     </div>
     <div class="meet">
         <h1>Que tal bater um papo? Agende um horário comigo!</h1>
-        <button onclick="location.href='https://cal.com/wanghley'">Agende aqui!</button>
+        <button onclick="location.href='https://cal.com/wanghley'"><i class="fa-regular fa-calendar-days"></i> Agende aqui!</button>
     </div>
     <hr/>
     <div class="links">
