feat: hyperlinks social media

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     <h1 class="title"><span>Wanghley</span> Soares Martins</h1>
     <p class="description">Social entrepreneur, inventor, and aspiring engineer leveraging technology for transformative solutions.</p>
     <div class="social">
-        <i class="fa-brands fa-linkedin-in fa-2xl"></i>
-        <i class="fa-brands fa-instagram fa-2xl"></i>
-        <i class="fa-brands fa-twitter fa-2xl"></i>
-        <i class="fa-brands fa-github fa-2xl"></i>
-        <i class="fa-solid fa-globe fa-2xl"></i>
-        <i class="fa-solid fa-envelope fa-2xl"></i>
+        <a href="https://www.linkedin.com/in/wanghley/"><i class="fa-brands fa-linkedin-in fa-2xl"></i></a>
+        <a href="https://www.instagram.com/wanghley/"><i class="fa-brands fa-instagram fa-2xl"></i></a>
+        <a href="https://twitter.com/wanghley"><i class="fa-brands fa-twitter fa-2xl"></i></a>
+        <a href="https://github.com/Wanghley"><i class="fa-brands fa-github fa-2xl"></i></a>
+        <a href="https://wanghley.com/"><i class="fa-solid fa-globe fa-2xl"></i></a>
+        <a href="mailto:wanghley@wanghley.com"><i class="fa-solid fa-envelope fa-2xl"></i></a>
     </div>
     <div class="meet">
         <h1>Que tal bater um papo? Agende um horário comigo!</h1>
