--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
     <link rel="stylesheet" href="style.css"/>
     <title>Wanghley's links</title>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-S8H0C1GMV1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-S8H0C1GMV1');
+    </script>
+
 </head>
 <body>
     <img class="headshot" src="assets/me.jpg" alt="">
