--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-T9RNTWQ');</script>
+    <!-- End Google Tag Manager -->
+
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
@@ -12,18 +20,21 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     <link rel="stylesheet" href="style.css"/>
     <title>Wanghley's links</title>
 
-    <!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-S8H0C1GMV1"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
     gtag('config', 'G-S8H0C1GMV1');
     </script>
 
 </head>
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T9RNTWQ"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <img class="headshot" src="assets/me.jpg" alt="">
     <h1 class="title"><span>Wanghley</span> Soares Martins</h1>
     <p class="description">Social entrepreneur, inventor, and aspiring engineer leveraging technology for transformative solutions.</p>
