--- a/p4g.html
+++ b/p4g.html
@@ -38,10 +38,23 @@
       height: 100%;
       border: none;
     }
+
+    .social-media {
+      text-align: center;
+      margin-top: 30px;
+    }
+
+    .social-media a {
+      display: inline-block;
+      margin: 0 10px;
+      font-size: 24px;
+      color: #333;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
-  <h1>File Showcase</h1>
+  <h1>Gostaram? Apoiem meu trabalho me seguindo nas redes sociais!</h1>
   <div class="container">
     <div class="file-container">
       <iframe src="https://docs.google.com/presentation/d/1bgNHqBMLe3bRsZns9CcCDo74_RrZQGSMAdqiwOb0Bzs/preview"></iframe>
@@ -49,6 +62,12 @@
     <div class="file-container">
       <iframe src="https://drive.google.com/file/d/1RAJbsMMa-jRR6AmPqFfaaZZrbi4AsbPu/preview"></iframe>
     </div>
+  </div>
+  <div class="social-media">
+    <a href="https://twitter.com/wanghley" target="_blank">@wanghley on Twitter</a>
+    <a href="https://instagram.com/wanghley" target="_blank">@wanghley on Instagram</a>
+    <a href="https://facebook.com/wanghley" target="_blank">@wanghley on Facebook</a>
+    <a href="https://linkedin.com/in/wanghley" target="_blank">@wanghley on LinkedIn</a>
   </div>
 </body>
 </html>
