--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     </div>
     <hr/>
     <div class="links">
+        <button target="_blank" onclick="location.href='https://www.youtube.com/watch?v=tceoUHQ9rPQ'">
+            <p>TEDx The Art of Innovation 2023</p>
+        </button>
         <button target="_blank" onclick="location.href='p4g.html'">
             <p>Materiais Perfect Pitch P4G</p>
         </button>
