fix: correct email address

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         <a href="https://twitter.com/wanghley"><i class="fa-brands fa-twitter fa-2xl"></i></a>
         <a href="https://github.com/Wanghley"><i class="fa-brands fa-github fa-2xl"></i></a>
         <a href="https://wanghley.com/"><i class="fa-solid fa-globe fa-2xl"></i></a>
-        <a href="mailto:wanghley@wanghley.com"><i class="fa-solid fa-envelope fa-2xl"></i></a>
+        <a href="mailto:me@wanghley.com"><i class="fa-solid fa-envelope fa-2xl"></i></a>
     </div>
     <div class="meet">
         <h1>Que tal bater um papo? Agende um horário comigo!</h1>
